fixed alignment of X in the error box

--- a/site/css/common.css
+++ b/site/css/common.css
@@ -68,9 +68,9 @@ input[type=submit] {
     margin-right: 10%;
 
     margin-bottom: 0px;
-    /* display: none; */
+    position: relative;
 
-    display: flex; align-items: center;
+    align-items: center;
 }
 
 .failure {
